--- a/angular.json
+++ b/angular.json
@@ -1,29 +1,29 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "newProjectRoot": "addons",
   "projects": {
-    "angular-add-on": {
-      "root": "",
-      "sourceRoot": "src",
+    "ms-word": {
+      "root": "addons/ms-word/",
+      "sourceRoot": "addons/ms-word/src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "msw",
       "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-add-on",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "outputPath": "dist/ms-word",
+            "index": "addons/ms-word/src/index.html",
+            "main": "addons/ms-word/src/main.ts",
+            "polyfills": "addons/ms-word/src/polyfills.ts",
+            "tsConfig": "addons/ms-word/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "addons/ms-word/src/favicon.ico",
+              "addons/ms-word/src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "addons/ms-word/src/styles.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -32,8 +32,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "addons/ms-word/src/environments/environment.ts",
+                  "with": "addons/ms-word/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -58,34 +58,34 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-add-on:build"
+            "browserTarget": "ms-word:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-add-on:build:production"
+              "browserTarget": "ms-word:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-add-on:build"
+            "browserTarget": "ms-word:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "main": "addons/ms-word/src/test.ts",
+            "polyfills": "addons/ms-word/src/polyfills.ts",
+            "tsConfig": "addons/ms-word/tsconfig.spec.json",
+            "karmaConfig": "addons/ms-word/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "addons/ms-word/src/styles.css"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "addons/ms-word/src/favicon.ico",
+              "addons/ms-word/src/assets"
             ]
           }
         },
@@ -93,8 +93,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "addons/ms-word/tsconfig.app.json",
+              "addons/ms-word/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -103,27 +103,283 @@
         }
       }
     },
-    "angular-add-on-e2e": {
-      "root": "e2e/",
+    "ms-word-e2e": {
+      "root": "addons/ms-word-e2e/",
       "projectType": "application",
       "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-add-on:serve"
+            "protractorConfig": "addons/ms-word-e2e/protractor.conf.js",
+            "devServerTarget": "ms-word:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-add-on:serve:production"
+              "devServerTarget": "ms-word:serve:production"
             }
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "addons/ms-word-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "google-docs": {
+      "root": "addons/google-docs/",
+      "sourceRoot": "addons/google-docs/src",
+      "projectType": "application",
+      "prefix": "gas",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/google-docs",
+            "index": "addons/google-docs/src/index.html",
+            "main": "addons/google-docs/src/main.ts",
+            "polyfills": "addons/google-docs/src/polyfills.ts",
+            "tsConfig": "addons/google-docs/tsconfig.app.json",
+            "assets": [
+              "addons/google-docs/src/favicon.ico",
+              "addons/google-docs/src/assets"
+            ],
+            "styles": [
+              "addons/google-docs/src/styles.css"
+            ],
+            "scripts": [],
+            "es5BrowserSupport": true
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "addons/google-docs/src/environments/environment.ts",
+                  "with": "addons/google-docs/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "google-docs:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "google-docs:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "google-docs:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "addons/google-docs/src/test.ts",
+            "polyfills": "addons/google-docs/src/polyfills.ts",
+            "tsConfig": "addons/google-docs/tsconfig.spec.json",
+            "karmaConfig": "addons/google-docs/karma.conf.js",
+            "styles": [
+              "addons/google-docs/src/styles.css"
+            ],
+            "scripts": [],
+            "assets": [
+              "addons/google-docs/src/favicon.ico",
+              "addons/google-docs/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "addons/google-docs/tsconfig.app.json",
+              "addons/google-docs/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "google-docs-e2e": {
+      "root": "addons/google-docs-e2e/",
+      "projectType": "application",
+      "prefix": "",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "addons/google-docs-e2e/protractor.conf.js",
+            "devServerTarget": "google-docs:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "google-docs:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "addons/google-docs-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "shared-addon": {
+      "root": "addons/shared-addon/",
+      "sourceRoot": "addons/shared-addon/src",
+      "projectType": "application",
+      "prefix": "app",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/shared-addon",
+            "index": "addons/shared-addon/src/index.html",
+            "main": "addons/shared-addon/src/main.ts",
+            "polyfills": "addons/shared-addon/src/polyfills.ts",
+            "tsConfig": "addons/shared-addon/tsconfig.app.json",
+            "assets": [
+              "addons/shared-addon/src/favicon.ico",
+              "addons/shared-addon/src/assets"
+            ],
+            "styles": [
+              "addons/shared-addon/src/styles.css"
+            ],
+            "scripts": [],
+            "es5BrowserSupport": true
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "addons/shared-addon/src/environments/environment.ts",
+                  "with": "addons/shared-addon/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "shared-addon:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "shared-addon:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "shared-addon:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "addons/shared-addon/src/test.ts",
+            "polyfills": "addons/shared-addon/src/polyfills.ts",
+            "tsConfig": "addons/shared-addon/tsconfig.spec.json",
+            "karmaConfig": "addons/shared-addon/karma.conf.js",
+            "styles": [
+              "addons/shared-addon/src/styles.css"
+            ],
+            "scripts": [],
+            "assets": [
+              "addons/shared-addon/src/favicon.ico",
+              "addons/shared-addon/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "addons/shared-addon/tsconfig.app.json",
+              "addons/shared-addon/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "shared-addon-e2e": {
+      "root": "addons/shared-addon-e2e/",
+      "projectType": "application",
+      "prefix": "",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "addons/shared-addon-e2e/protractor.conf.js",
+            "devServerTarget": "shared-addon:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "shared-addon:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "addons/shared-addon-e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
